--- a/index.html
+++ b/index.html
@@ -304,13 +304,15 @@
   </div>
 </section>
 
+
 <!-- Teaser Image -->
 <section class="section teaser">
   <div class="container is-max-desktop">
     <!-- 标题 -->
-    <h2 class="title is-3 has-text-link has-text-centered" style="margin-bottom: 1.5rem;">
+    <h2 class="title is-3 has-text-link has-text-centered" style="margin-bottom: 0.5rem;">
       Internal Gap-based Self-Improvement
     </h2>
+    <div class="title-underline has-text-link"></div>
 
     <!-- 灰色背景卡片 -->
     <div class="box" style="background-color: #f5f7fa; border-radius: 12px; padding: 2rem;">
@@ -326,25 +328,25 @@
           non-unification.
         </h2>
 
-        <!-- Key Insight 框 -->
-        <article class="message is-info" style="margin-top: 1.5rem;">
-          <div class="message-header">
-            <p class="title is-5 has-text-white">Key Insight</p>
-          </div>
-          <div class="message-body has-text-justified">
+        <!-- Key Insight 小节 -->
+        <div class="has-text-left" style="margin-top: 1.5rem;">
+          <h3 class="title is-4 has-text-link" style="margin-bottom: 0.25rem;">
+            Key Insight
+          </h3>
+          <div class="title-underline has-text-link"></div>
+          <div class="content">
             <ul>
               <li>Unified MLLMs exhibit an internal gap: understanding typically outperforms generation.</li>
-              <li>This gap mainly stems from weak generation rather than misunderstanding, motivating an internal gap-based self-improvement strategy.</li>
+              <li>The gap mainly stems from weak generation rather than misunderstanding, motivating an internal gap-based self-improvement strategy.</li>
             </ul>
           </div>
-        </article>
+        </div>
 
       </div>
     </div>
   </div>
 </section>
 <!-- End Teaser Image -->
-
 
 
 
