--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
   <div class="container is-max-desktop">
     <!-- 标题 -->
     <h2 class="title is-3 has-text-link has-text-centered" style="margin-bottom: 0.5rem;">
-      Internal Gap-based Self-Improvement
+      Unified MLLMs Remain Non-unified
     </h2>
-    <div class="title-underline has-text-link"></div>
+    <!-- <div class="title-underline has-text-link"></div> -->
 
     <!-- 灰色背景卡片 -->
     <div class="box" style="background-color: #f5f7fa; border-radius: 12px; padding: 2rem;">
@@ -321,7 +321,7 @@
         <img src="static/images/self-contradictory.png" alt="MLLMs' internal gap"/>
         
         <!-- 图片说明 -->
-        <h3 class="subtitle has-text-centered" style="margin-top: 1rem;">
+        <h3 class="subtitle is-6 has-text-centered" style="margin-top: .75rem;">
           Illustration of MLLMs' internal gap. We examine challenging cases involving implicit 
           physical principles using ChatGPT o3 and Gemini 2.5 Flash, and find: images produced 
           by generation branch are identified as incorrect by understanding branch, showing 
