--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         <img src="static/images/self-contradictory.png" alt="MLLMs' internal gap"/>
         
         <!-- 图片说明 -->
-        <h3 class="subtitle is-6 has-text-centered" style="margin-top: .75rem;">
+        <h3 class="has-text-centered is-size-8" style="margin-top: .75rem;">
           Illustration of MLLMs' internal gap. We examine challenging cases involving implicit 
           physical principles using ChatGPT o3 and Gemini 2.5 Flash, and find: images produced 
           by generation branch are identified as incorrect by understanding branch, showing 
@@ -350,24 +350,30 @@
 
 
 
-
-<!-- Paper abstract -->
-<section class="section hero is-light">
+<!-- Abstract Section -->
+<section class="section">
   <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
+    <div class="columns is-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>
-        <div class="content has-text-justified">
-          <!-- TODO: Replace with your paper abstract -->
-          <p>
-            Although unified MLLMs aim to unify generation and understanding, they are considered to exhibit an internal gap, with understanding outperforming generation. Through large‑scale evaluation across multiple MLLMs and tasks, we confirm the widespread non‑unification of MLLMs, and demonstrate that it indeed stems from weak generation rather than misunderstanding. This finding motivates us to propose a simple yet effective internal gap-based self-improvement framework, which mitigates internal gaps by leveraging stronger understanding to guide weaker generation without relying on any external signals. We validate this strategy through comprehensive experiments: scoring generations with understanding to construct image data for post-training (e.g., SFT and DPO) significantly improves generation while promoting unification. Furthermore, we empirically discover a co-improvement effect of such self-improvement, a phenomenon well known in pre-training but underexplored in post-training. Specifically, as generation improves, understanding becomes more effective at detecting false positives that were previously misclassified as prompt‑aligned. To explain this effect, we extend learning dynamic theory to the MLLM setting, showing that the shared empirical neural tangent kernel between generation and understanding encourages aligned learning dynamics, thereby driving co-improvement. This interplay between generation and understanding further motivates a curriculum learning approach for stronger self‑improvement: progressively enhanced understanding and generation revisit samples underutilized by pre‑trained MLLMs, dynamically expanding post‑training data and leading to improved performance.
-          </p>
+        <!-- 标题（蓝色 + 下划线） -->
+        <h2 class="title is-3 has-text-link has-text-centered">
+          Abstract
+        </h2>
+        <div class="title-underline has-text-link"></div>
+
+        <!-- 灰色卡片（不铺满） -->
+        <div class="box" style="background-color: #f5f7fa; border-radius: 12px; padding: 2rem;">
+          <div class="content has-text-justified">
+            <p>
+              Although unified MLLMs aim to unify generation and understanding, they are considered to exhibit an internal gap, with understanding outperforming generation. Through large-scale evaluation across multiple MLLMs and tasks, we confirm the widespread non-unification of MLLMs, and demonstrate that it indeed stems from weak generation rather than misunderstanding. This finding motivates us to propose a simple yet effective internal gap-based self-improvement framework, which mitigates internal gaps by leveraging stronger understanding to guide weaker generation without relying on any external signals. We validate this strategy through comprehensive experiments: scoring generations with understanding to construct image data for post-training (e.g., SFT and DPO) significantly improves generation while promoting unification. Furthermore, we empirically discover a co-improvement effect of such self-improvement, a phenomenon well known in pre-training but underexplored in post-training. Specifically, as generation improves, understanding becomes more effective at detecting false positives that were previously misclassified as prompt-aligned. To explain this effect, we extend learning dynamic theory to the MLLM setting, showing that the shared empirical neural tangent kernel between generation and understanding encourages aligned learning dynamics, thereby driving co-improvement. This interplay between generation and understanding further motivates a curriculum learning approach for stronger self-improvement: progressively enhanced understanding and generation revisit samples underutilized by pre-trained MLLMs, dynamically expanding post-training data and leading to improved performance.
+            </p>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </section>
-<!-- End paper abstract -->
+<!-- End Abstract Section -->
 
 
 <!-- Image carousel (title changes with slide) -->
