--- a/index.html
+++ b/index.html
@@ -420,8 +420,6 @@
 </section>
 
 
-
-
 <!-- Teaser Image -->
 <section class="section teaser">
   <div class="container is-max-desktop">
@@ -434,15 +432,19 @@
         </h2>
         <div class="title-underline has-text-link"></div>
 
-        <!-- 图片（缩小到 70% 宽度并居中） -->
-        <img src="static/images/alg1.png" alt="MLLMs' internal gap" 
-             style="margin-top: 1rem; max-width: 70%; height: auto;"/>
-
         <!-- 浅蓝色背景卡片 -->
         <div class="box" style="background-color: #f8f9ff; border-radius: 12px; padding: 1.5rem; margin-top: 1.5rem;">
-          <h2 class="subtitle has-text-justified" style="font-size: 1rem;">
-            Scoring generations with stronger understanding to construct image data for post-training (e.g., SFT and DPO) on generation branch.
+
+          <!-- 图片（缩小到 70% 宽度并居中） -->
+          <img src="static/images/alg1.png" alt="MLLMs' internal gap" 
+               style="margin-top: 1rem; max-width: 70%; height: auto;"/>
+
+          <!-- 说明文字 -->
+          <h2 class="subtitle has-text-justified" style="font-size: 1rem; margin-top: 1rem;">
+            Scoring generations with stronger understanding to construct image data for post-training 
+            (e.g., SFT and DPO) on generation branch.
           </h2>
+
         </div>
 
       </div>
