--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     };
   </script>
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
-
+  
 
   <script>
   $(document).ready(function() {
@@ -410,7 +410,7 @@
           <img src="static/images/reason.png" 
                alt="Weak generation explanation" loading="lazy"/>
           <h2 class="subtitle has-text-justified" style="margin-top: 1rem;">
-            <span class="has-text-weight-bold has-text-link">Internal gap mainly stems from weak generation instead of misunderstanding.</span> Weak-generation (Qwen/Human-checked) above 50% (even 100%) indicate internal gap mainly stems from weak generation.
+            <span class="has-text-weight-bold has-text-link">Internal gap mainly stems from weak generation instead of misunderstanding.</span> Weak-generation (Qwen/Human-checked) above 50% (even 100%) indicate internal gap mainly stems from weak generation instead of misunderstanding.
           </h2>
         </div>
 
@@ -439,8 +439,35 @@
 
       <!-- 说明文字 -->
       <h2 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
-        Scoring generations with stronger understanding to construct image data for post-training
+        <span class="has-text-weight-bold has-text-link">Self-improvement.</span> Scoring generations with stronger understanding to construct image data for post-training
         (e.g., SFT and DPO) on the generation branch.
+      </h2>
+    </div>
+  </div>
+</section>
+<!-- End Teaser Image -->
+
+
+<!-- Teaser Image -->
+<section class="section teaser">
+  <div class="container is-max-desktop">
+
+    <!-- 标题（蓝色） -->
+    <h2 class="title is-3 has-text-link has-text-centered">
+      Experimental Finding 1: Self-improvement effectively improves generation and unification
+    </h2>
+    <div class="title-underline has-text-link"></div>
+
+    <!-- 卡片放在 container 下，宽度与其他一致 -->
+    <div class="box" style="background-color:#f8f9ff; border-radius:12px; padding:1.5rem; margin-top:1.5rem;">
+
+      <!-- 图片（仅缩小 70%，不影响卡片宽度） -->
+      <img src="static/images/find1.png" alt="MLLMs' internal gap"
+           alt="find 1" loading="lazy"/>
+
+      <!-- 说明文字 -->
+      <h2 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
+        <span class="has-text-weight-bold has-text-link">Self-improvement enhances generation and unification, with gains up to 20\% and 16\% (1–non-unification score).</span> Furthermore, improvements correlate with the internal gap (correlation coefficient $\\rho_{\\Delta,\\text{Non.}}=0.53$): models and subtasks with larger gaps benefit more.
       </h2>
     </div>
   </div>
