--- a/index.html
+++ b/index.html
@@ -484,39 +484,49 @@
 </section>
 <!-- End Teaser Image -->
 
-
-<!-- Teaser Image -->
+<!-- Experimental Finding 2 (Carousel) -->
 <section class="section teaser">
   <div class="container is-max-desktop">
 
     <!-- 标题（蓝色） -->
     <h2 class="title is-3 has-text-link has-text-centered">
-      Experimental Finding 1: Self-improvement effectively improves generation and unification
+      Experimental Finding 2: Self-improvement effectively improves generation and unification
     </h2>
     <div class="title-underline has-text-link"></div>
 
-    <!-- 卡片放在 container 下，宽度与其他一致 -->
+    <!-- 浅蓝色卡片，内含轮播 -->
     <div class="box" style="background-color:#f8f9ff; border-radius:12px; padding:1.5rem; margin-top:1.5rem;">
+      <div id="results-carousel-2" class="carousel results-carousel">
 
-      <img src="static/images/find2.png" alt="MLLMs' internal gap"
-           alt="find 1" loading="lazy"/>
+        <!-- Slide 1 -->
+        <div class="item">
+          <img src="static/images/find2.png" alt="Co-improvement overview" loading="lazy"/>
+          <h3 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
+            <span class="has-text-weight-bold has-text-link">Co-improvement Effect.</span>
+            (a) shows an example where self-improved Janus-Pro generates prompt-aligned images and correctly scores the original as mismatched; (b) reports win rates mostly above 50%, indicating self-improved MLLMs judge prompt–image alignment more accurately than pre-trained ones.
+          </h3>
+        </div>
 
-      <!-- 说明文字 -->
-      <h2 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
-        <span class="has-text-weight-bold has-text-link">
-          Self-improvement enhances generation and unification, with gains up to 20% and 16% (1–non-unification score).
-        </span>
-        Furthermore, improvements correlate with the internal gap 
-        (correlation coefficient \( \\rho_{\\Delta,\\text{Non.}} = 0.53 \)): 
-        models and subtasks with larger gaps benefit more.
-      </h2>
+        <!-- Slide 2 -->
+        <div class="item">
+          <img src="static/images/find2-1.png" alt="Co-improvement example 1" loading="lazy"/>
+          <h3 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
+            Example 1: Self-improvement boosts generation quality while improving alignment judgment.
+          </h3>
+        </div>
 
+        <!-- Slide 3 -->
+        <div class="item">
+          <img src="static/images/find2-2.png" alt="Co-improvement example 2" loading="lazy"/>
+          <h3 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
+            Example 2: Larger internal gaps tend to yield larger gains after self-improvement.
+          </h3>
+        </div>
+
+      </div>
     </div>
   </div>
 </section>
-<!-- End Teaser Image -->
-
-
 
 
 
