--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
         <div class="item">
           <img src="static/images/find2-1.png" alt="Co-improvement example 1" loading="lazy"/>
           <h3 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
-            Example 1: Self-improvement boosts generation quality while improving alignment judgment.
+            <span class="has-text-weight-bold has-text-link">Examples of co-improvements of self‑improved Janus-Pro and Show-o under SFT.</span> We observe that, after self‑improvement, Show-o and Janus-Pro generate images that align prompts and accurately identify when images produced by the pre‑trained MLLM are misaligned with the prompts
           </h3>
         </div>
 
@@ -519,7 +519,8 @@
         <div class="item">
           <img src="static/images/find2-2.png" alt="Co-improvement example 2" loading="lazy"/>
           <h3 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
-            Example 2: Larger internal gaps tend to yield larger gains after self-improvement.
+            <span class="has-text-weight-bold has-text-link">Examples of co-improvements of self‑improved Janus-Pro and Show-o with DPO.</span>
+             We observe that, after self‑improvement, Show-o and Janus-Pro generate images that align prompts and accurately identify when images produced by the pre‑trained MLLM are misaligned with the prompts.
           </h3>
         </div>
 
