--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 
     <!-- 标题（蓝色） -->
     <h2 class="title is-3 has-text-link has-text-centered">
-      Experimental Finding 1: Self-improvement effectively improves generation and unification
+      Experimental Finding 1: Self-improvement Effectively Improves Generation and Unification
     </h2>
     <div class="title-underline has-text-link"></div>
 
@@ -490,7 +490,7 @@
 
     <!-- 标题（蓝色） -->
     <h2 class="title is-3 has-text-link has-text-centered">
-      Experimental Finding 2: Self-improvement effectively improves generation and unification
+      Experimental Finding 2:  Co-improvement between Generation and Understanding
     </h2>
     <div class="title-underline has-text-link"></div>
 
