--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
           Self-improvement enhances generation and unification, with gains up to 20% and 16% (1–non-unification score).
         </span>
         Furthermore, improvements correlate with the internal gap 
-        (correlation coefficient \( \\rho_{\\Delta,\\text{Non.}} = 0.53 \)): 
+        (correlation coefficient `\( \\rho_{\\Delta,\\text{Non.}} = 0.53 \)`): 
         models and subtasks with larger gaps benefit more.
       </h2>
 
@@ -505,7 +505,7 @@
             <span class="has-text-weight-bold has-text-link">Co-improvement Effect.</span>
             (a) shows an example where self-improved Janus-Pro generates prompt-aligned images and correctly scores the original as mismatched; (b) reports win rates mostly above 50%, indicating self-improved MLLMs judge prompt–image alignment more accurately than pre-trained ones.
             <br><br>
-             <span class="has-text-weight-bold has-text-link">Win rate of understanding</span> is the proportion of cases where the self-improved MLLM disagrees with the pre-trained one but agrees with the stronger external judge, e.g., Qwen2.5-VL-72B-Instruct. For example, if the models disagree on three samples and the self-improved model matches Qwen on two, win rate is 2/3. 
+             <span class="has-text-weight-bold has-text-link">Win rate of understanding</span> is the proportion of cases where the self-improved MLLM disagrees with the pre-trained one but agrees with the stronger external judge, e.g., Qwen2.5-VL-72B-Instruct. For example, if the models disagree on three samples and the self-improved model matches Qwen on two, win rate is `2/3`. 
           </h3>
         </div>
 
