--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
           Self-improvement enhances generation and unification, with gains up to 20% and 16% (1–non-unification score).
         </span>
         Furthermore, improvements correlate with the internal gap 
-        (correlation coefficient `\( \\rho_{\\Delta,\\text{Non.}} = 0.53 \)`): 
+        (correlation coefficient \( \\rho_{\\Delta,\\text{Non.}} = 0.53 \)): 
         models and subtasks with larger gaps benefit more.
       </h2>
 
@@ -505,7 +505,7 @@
             <span class="has-text-weight-bold has-text-link">Co-improvement Effect.</span>
             (a) shows an example where self-improved Janus-Pro generates prompt-aligned images and correctly scores the original as mismatched; (b) reports win rates mostly above 50%, indicating self-improved MLLMs judge prompt–image alignment more accurately than pre-trained ones.
             <br><br>
-             <span class="has-text-weight-bold has-text-link">Win rate of understanding</span> is the proportion of cases where the self-improved MLLM disagrees with the pre-trained one but agrees with the stronger external judge, e.g., Qwen2.5-VL-72B-Instruct. For example, if the models disagree on three samples and the self-improved model matches Qwen on two, win rate is `2/3`. 
+             <span class="has-text-weight-bold has-text-link">Win rate of understanding</span> is the proportion of cases where the self-improved MLLM disagrees with the pre-trained one but agrees with the stronger external judge, e.g., Qwen2.5-VL-72B-Instruct. For example, if the models disagree on three samples and the self-improved model matches Qwen on two, win rate is 2/3. 
           </h3>
         </div>
 
@@ -525,15 +525,40 @@
              We observe that, after self‑improvement, Show-o and Janus-Pro generate images that align prompts and accurately identify when images produced by the pre‑trained MLLM are misaligned with the prompts.
           </h3>
         </div>
-
       </div>
     </div>
   </div>
 </section>
 
 
+<!-- Teaser Image -->
+<section class="section teaser">
+  <div class="container is-max-desktop">
 
+    <!-- 标题（蓝色） -->
+    <h2 class="title is-3 has-text-link has-text-centered">
+      Mechanism: Explaining Co-improvement from Learning Dynamics
+    </h2>
+    <div class="title-underline has-text-link"></div>
 
+    <!-- 卡片放在 container 下，宽度与其他一致 -->
+    <div class="box" style="background-color:#f8f9ff; border-radius:12px; padding:1.5rem; margin-top:1.5rem;">
+
+      <img src="static/images/find1.png" alt="MLLMs' internal gap"
+           alt="find 1" loading="lazy"/>
+
+      <!-- 说明文字 -->
+      <h2 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
+        <span class="has-text-weight-bold has-text-link">
+          Self-improvement enhances generation and unification, with gains up to 20% and 16% (1–non-unification score).
+        </span>
+        Furthermore, improvements correlate with the internal gap 
+      </h2>
+
+    </div>
+  </div>
+</section>
+<!-- End Teaser Image -->
 
 
 <!--BibTex citation -->
