--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 
     <!-- 标题（蓝色） -->
     <h2 class="title is-3 has-text-link has-text-centered">
-      Mechanism: Explaining Co-improvement from Learning Dynamics
+      Mechanism: Explaining the Co-improvement Effect from Learning Dynamics
     </h2>
     <div class="title-underline has-text-link"></div>
 
