--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
     <!-- 卡片放在 container 下，宽度与其他一致 -->
     <div class="box" style="background-color:#f8f9ff; border-radius:12px; padding:1.5rem; margin-top:1.5rem;">
 
-      <img src="static/images/find1.png" alt="MLLMs' internal gap"
+      <img src="static/images/proposition 1.png" alt="MLLMs' internal gap"
            alt="find 1" loading="lazy"/>
 
       <!-- 说明文字 -->
