--- a/index.html
+++ b/index.html
@@ -470,14 +470,15 @@
            alt="find 1" loading="lazy"/>
 
       <!-- 说明文字 -->
-      <h2 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
+      <h3 class="subtitle has-text-justified" style="font-size:1rem; margin-top:1rem;">
         <span class="has-text-weight-bold has-text-link">
-          Self-improvement enhances generation and unification, with gains up to 20% and 16% (1–non-unification score).
+          Self-improvement enhances generation and unification, with gains up to 20\% and 16\% (1–non-unification score).
         </span>
         Furthermore, improvements correlate with the internal gap 
-        (correlation coefficient \( \\rho_{\\Delta,\\text{Non.}} = 0.53 \)): 
+        (correlation coefficient $\rho_{\Delta,\text{Non.}}=0.53$): 
         models and subtasks with larger gaps benefit more.
-      </h2>
+      </h3>
+
 
     </div>
   </div>
